# numerical_battles

./: .gitignore.txt  Card.cpp  Card.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Hand.cpp  Hand.h  LICENSE  Player.cpp  Player.h  PyAPI.cpp  main.cpp
Numerical_battles_cpp/: AI.cpp  AI.h  CMakeLists.txt  Card.cpp  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Player.cpp  PyAPI.cpp
Numerical_battles_py/: Play.py  game_logic.py  main.py  settings.py  ui_elements.py
